# claude-light

./: .gitignore  README.md  pyproject.toml
claude_hooks/: settings.example.json
openspec/: config.yaml
openspec/changes/add-claude-monitor-floating-window/: proposal.md  retrospective.md  tasks.md
openspec/changes/add-claude-monitor-floating-window/specs/claude-hook-status-bridge/: spec.md
openspec/changes/add-claude-monitor-floating-window/specs/desktop-status-monitor/: spec.md
openspec/changes/archive/2026-06-18-add-claude-monitor-floating-window/: .openspec.yaml  brainstorm.md  design.md  plan.md  verify.md
openspec/specs/claude-hook-status-bridge/: spec.md
openspec/specs/desktop-status-monitor/: spec.md
src/claude_monitor/: __init__.py  app.py  hook_writer.py  paths.py  status.py  watcher.py
tests/: test_imports.py  test_status.py  test_watcher.py
